# pyircp

./: .gitignore  .gitmodules  .travis.yml  README.md  setup.py
pyircp/: CMakeLists.txt  build.sh
pyircp/include/: device_algs.cu.h  device_algs.inl.cu.h  exception.h  icp.cu.h  icp_types.h  icp_wrapper.h  ioprint.h  octree.cu.h  octree.inl.cu.h  ransac.cu.h  ransac.inl.cu.h  timer.h
pyircp/src/: icp.cpp.cu  icp_wrapper.cpp.cu  pyircp.cpp
pyircp/tests/: test_core.cpp  test_device_algs.cpp.cu  test_octree.cpp.cu  test_ransac.cpp.cu
test/: display_results.py  test_pycuicp.py
test/test_data/: README.md
travis/: build-wheels.sh
